# coursework_4

./: README.md  main.py  pyproject.toml
config/: classes.py  functions.py  hh_vacancies.json  sj_vacancies.json
